--- a/index4.html
+++ b/index4.html
@@ -181,7 +181,8 @@
 
                     <div class="btn-wraps">
                         <a class="button-report" href="https://forms.gle/pNH18iDQZxvnjNW49" target="_blank"><span class="blind">찐팬 제보하기</span></a>
-                        <a class="button-share" onClick="modal('dialog3')"><span class="blind">내 주변 찐팬에게 공유하기</span></a>
+                        <button type="button" class="button-share" onclick="modal('dialog3');"><span class="blind">내 주변 찐팬에게 공유하기</span></button>
+                        <!-- <a class="button-share" onClick="modal('dialog3')"><span class="blind">내 주변 찐팬에게 공유하기</span></a> -->
                     </div>
 				</div>
 
@@ -537,8 +538,18 @@
                                     <dd class="mid-desc mg-left">
                                         보유 중인 LG전자 제품과 함께 시간을 보내고 있는 사진을 업로드해주세요.<br />
                                         찐팬력이 드러날 수록 선발 확률 UP! <br />
-                                        가급적 제품 전체가 잘 드러나는 사진을 선택해주세요. (최대 10건)
+                                        가급적 제품 전체가 잘 드러나는 사진을 선택해주세요. (최대 10건)<br />
+                                        Jammy에 LG전자 제품 사진과 함께 찐팬 인증글 작성하고,<br />
+                                        캡처 이미지 업로드하면 선발 확률 UP!
                                     </dd>
+                                    <!-- <dt class="tit">
+                                        <label for="">제품 사진 업로드</label>
+                                    </dt>
+                                    <dd class="mid-desc mg-left">
+                                        보유 중인 LG전자 제품과 함께 시간을 보내고 있는 사진을 업로드해주세요.<br />
+                                        찐팬력이 드러날 수록 선발 확률 UP! <br />
+                                        가급적 제품 전체가 잘 드러나는 사진을 선택해주세요. (최대 10건)
+                                    </dd> -->
                                     <dd class="noti mg-left">사진 또는 이미지를 업로드해주세요.</dd>
                                     <dd class="noti mg-left">5MB 이하의 이미지 파일(jpg, jpeg, png, gif)만 등록 할 수 있습니다.</dd>
                                     <dd class="conts">
