--- a/index.html
+++ b/index.html
@@ -288,9 +288,7 @@
                                     <li>만 19세 미만 고객님의 경우 LG전자 앰버서더 지원이 불가합니다.</li>
                                     <li>타인의 명의 도용 등 비정상적이거나 불법적인 방법으로 참여하신 경우 LG전자 앰버서더 선정이 취소될 수 있습니다.</li>
                                     <li>개인정보 수집 활용 동의 시에만 지원 완료됩니다.</li>
-                                    <li>LG전자 앰버서더 활동은 실제 보유중인 LG전자 제품을 활용한 영상 콘텐츠 제작이 필수적이며, <br>제품 보유 여부 확인이 불가할 경우 선정이 취소될 수 있습니다.</li>
-
-                                    <li>LG전자 앰버서더로 최종 선정되신 분들에 한하여 지원 시 작성하신 휴대폰 번호로 개별 연락드릴 예정입니다. <br>최초 연락 이후 3일간 연락이 되지 않거나 3회 이상 연락에 회신하지 않을 경우 선정이 취소됩니다.</li>
+                                    <li>LG전자 앰버서더로 최종 선정되신 분들에 한하여 지원 시 작성하신 휴대폰 번호로 개별 연락드릴 예정입니다. 최초 연락 이후 3일간 연락이 되지 않거나 3회 이상 연락에 회신하지 않을 경우 선정이 취소됩니다.</li>
                                     <li>LG전자 앰버서더는 내부 선발 기준에 따라 선정되며, 선정 기준에 대한 별도의 답변은 제공하지 않습니다.</li>
                                     <li>잘못된 개인정보 제공으로 인해 선발 안내 메시지를 수신하지 못한 경우 당사에서 책임지지 않습니다.</li>
                                     <li>LG전자 앰버서더 활동의 상세 프로그램은 최종 인원 선정 이후 별도 안내해드릴 예정입니다. (LG전자 앰버서더 전용 카카오톡 채널 추가 필수)</li>
@@ -303,9 +301,11 @@
 
                                 <div class="tit mgt">&lt;LG전자 찐팬을 제보해주세요!&gt; 이벤트 운영 및 참여 유의 사항</div>
                                  <ul class="agree-txt">
-                                    <li>본 이벤트의 경우 반드시 본인이 직접 촬영·제작한 콘텐츠를 본인 명의의 계정에 업로드해야 합니다.</li>
-                                    <li>이벤트 참여 시 타인의 콘텐츠를 무단 사용하거나 명의를 도용하는 경우 당첨이 취소됩니다.</li>
-                                    <li>본인 외 타인이 영상·사진에 노출되는 경우, 사전에 해당 인물의 동의를 구한 것으로 간주하며, 제한법령을 위반하거나 사회적으로 부적절한 방법으로 이벤트에 참여한 경우 심사 제외 및 당첨이 취소될 수 있습니다.</li>
+                                    <li>방법 ① 본인 인증 참여 시 반드시 본인이 직접 촬영·제작한 콘텐츠를 본인 명의의 SNS 계정에 업로드해야 합니다.</li>
+                                    <li>방법 ① 본인 인증 참여 시 타인의 콘텐츠를 무단 사용하거나 명의를 도용하는 경우, 심사에서 제외되며 당첨이 취소됩니다.</li>
+                                    <li>방법 ② 찐팬 제보 참여 시 지인(친구, 가족, 팔로워 등)이 실제 제작·업로드한 콘텐츠의 URL을 제출해야 합니다.</li>
+                                    <li>방법 ② 찐팬 제보 참여 시 허위 제보 또는 권한 없는 콘텐츠 제보 시 심사에서 제외되며, 당첨이 취소됩니다.</li>
+                                    <li>본 이벤트에 제출된 콘텐츠에 본인 또는 지인 외 타인이 영상·사진에 노출되는 경우 사전에 해당 인물의 동의를 구한 것으로 간주합니다.<br>관련하여 제한법령을 위반하거나 사회적으로 부적절한 방법으로 이벤트에 참여한 경우, 심사 제외 및 당첨이 취소될 수 있습니다.</li>
                                     <li>본 이벤트에 제출된 콘텐츠는 ㈜LG전자의 마케팅 채널에 2차 가공되어 활용될 수 있으므로 원본 영상 납품을 요청 드릴 수 있으며 대상자는 영상 납품의 의무가 있습니다.</li>
                                     <li>모든 이벤트의 경품 당첨자는 이벤트 종료 후 지원서에 작성하신 휴대폰 번호로 경품 지급 관련 문자 발송 예정입니다. 잘못된 개인 정보 입력으로 인해 당첨자에게 연락이 불가하거나 오발송 또는 반송될 경우 재발송 되지 않으며 당사에서 책임지지 않습니다.</li>
                                     <li>모든 이벤트의 경품은 당사의 사정에 의해 사전 공지 없이 변경될 수 있으며, 발표일과 발송 일정은 당사 사정에 의해 변경되거나 지연될 수 있습니다.</li>
@@ -313,7 +313,7 @@
                                     <li>이벤트를 통해 수집된 개인정보는 수집 목적에 따라서만 활용되며, 개인정보 보호 정책에 따라 처리됩니다.</li>
                                     <li>개인정보 수집/이용에 동의 및 거부할 수 있으며, 이벤트 참여(LG전자 앰버서더 선정, 경품 당첨, 경품 수령 등)에 제한이 있을 수 있습니다.</li>
                                     <li>수집된 개인정보는 당첨자 확인 및 경품 발송 용도로만 사용되며 이벤트 종료일로부터 3개월까지 보유 후 폐기됩니다.</li>
-                                    <li>외 추가 문의 사항은 lge.ambassador.cs@gmail.com로 문의 바랍니다. </li>
+                                    <li>이외 추가 문의 사항은 lge.ambassador.cs@gmail.com로 문의 바랍니다. </li>
                                 </ul>
                             </div>
                             <div class="agree-input">
@@ -454,7 +454,7 @@
                                     <dt class="tit">
                                         <label for="f_product_appliances">보유하고 계신 LG전자 제품을 입력해주세요.<span class="txt-sm block">(복수 제품 입력 가능)</span></label>
                                     </dt>
-                                    <dd class="noti">제품을 보유하고 있지 않은 경우 ‘없음’으로 기입해주세요.</dd>
+                                    <!-- <dd class="noti">제품을 보유하고 있지 않은 경우 ‘없음’으로 기입해주세요.</dd> -->
                                     <dd class="conts">
                                         <div class="input-wrap count">
                                             <input type="text" name="f_product_appliances" value=""  id="f_product_appliances"  maxlength="50" placeholder="예시) 그램, 스탠바이미GO, 워시타워, 스타일러, 식기세척기 등">
@@ -538,7 +538,7 @@
                                     <dd class="mid-desc mg-left">
                                         보유 중인 LG전자 제품과 함께 시간을 보내고 있는 사진을 업로드해주세요.<br />
                                         찐팬력이 드러날 수록 선발 확률 UP! <br />
-                                        가급적 제품 전체가 잘 드러나는 사진을 선택해주세요. (최대 10건)<br />
+                                        가급적 제품 전체가 잘 드러나는 사진을 선택해주세요. (최대 10건)<br /><br />
                                         Jammy에 LG전자 제품 사진과 함께 찐팬 인증글 작성하고,<br />
                                         캡처 이미지 업로드하면 선발 확률 UP!
                                     </dd>
@@ -1286,6 +1286,34 @@
             $('body').removeClass('modal-open');
         });
 
+        $("input[name='f_sub_platform']").click(function() {
+            var previousValue = $(this).data('storedValue');
+            console.log(previousValue);
+            if(previousValue) {
+                $(this).prop('checked', !previousValue);
+                $(this).data('storedValue', !previousValue);
+            } else {
+                $(this).data('storedValue', true);
+                $("input[name='f_sub_platform']:not(:checked)").data("storedValue", false);
+            }
+        });
+        
+        // $('#snsSubChk1-1').on('click', function(e) {
+        //     if ($('#snsSubChk1-1').is(':checked')) {
+        //         $("#snsSubChk1-1").prop("checked", false);
+        //     }
+        // });
+        // $('#snsSubChk1-2').on('click', function(e) {
+        //     if ($('#snsSubChk1-2').is(':checked')) {
+        //         $("#snsSubChk1-2").prop("checked", false);
+        //     }
+        // });
+        // $('#snsSubChk1-3').on('click', function(e) {
+        //     if ($('#snsSubChk1-3').is(':checked')) {
+        //         $("#snsSubChk1-3").prop("checked", false);
+        //     }
+        // });
+
         function initForm() {
             dataTransfer.clearData();
             $("#writeForm")[0].reset();
@@ -1471,10 +1499,12 @@
                             return;
                         }
 
-                        if( $("#f_product_appliances").val().trim() == "") {
-                            jsErrorMessagePrint("보유하고 계신 LG전자 제품을 입력해 주세요.");
-                            //  $("#f_product_appliances").focus();
-                            return;
+                        if( $("#serviceChk1-1").is(":checked") == true) {
+                            if( $("#f_product_appliances").val().trim() == "") {
+                                jsErrorMessagePrint("보유하고 계신 LG전자 제품을 입력해 주세요.");
+                                //  $("#f_product_appliances").focus();
+                                return;
+                            }
                         }
 
                         if( $("#f_product_reason").val().trim() == "") {
