--- a/index.html
+++ b/index.html
@@ -10,26 +10,7 @@
     <meta name="description" content="세상의 모든 제품 경험, Jammy에서 나눠볼까요? 그램, 스탠바이미, 스타일러">
     <meta name="keywords" content="그램후기, 그램프로후기, 스탠바이미후기,스탠마이미고후기, 스타일러후기, 울트라게이밍모니터후기, 시네빔큐브후기">
 
-    <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="128x128" href="https://jammy.lge.co.kr/assets/common/img/favicon/jammy_favicon_128x128_b.png">
-    <link rel="icon" type="image/png" sizes="128x128" href="https://jammy.lge.co.kr/assets/common/img/favicon//jammy_favicon_128x128_a.png">
-
-    <meta property='og:title' content='나만의 경험 놀이터! | Jammy'/>
-    <meta property='og:description' content='세상의 모든 제품 경험, Jammy에서 나눠볼까요? 그램, 스탠바이미, 스타일러'/>
-    <meta property='og:type' content='website'/>
-    <meta property='og:url' content='https://jammy.lge.co.kr/'/>
-    <meta property='og:image' content='https://jammy.lge.co.kr/assets/common/img/common/ogimage-1200.png'/>
-
-    <meta name='twitter:title' content='나만의 경험 놀이터! | Jammy'/>
-    <meta name='twitter:description' content='세상의 모든 제품 경험, Jammy에서 나눠볼까요? 그램, 스탠바이미, 스타일러'/>
-    <meta name='twitter:card' content='summary'/>
-    <meta name='twitter:url' content='https://jammy.lge.co.kr/'/>
-    <meta name='twitter:image' content='https://jammy.lge.co.kr/assets/common/img/common/ogimage-800.png'/>
-
-    <link rel="canonical" href="https://jammy.lge.co.kr/" />
-
-
-    <script src="https://jammy.lge.co.kr/assets/common/script/jquery.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
     <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
 
 </head>
@@ -64,12 +45,12 @@
                     <!-- 영상  -->
                     <div id="ambassdor-ani" class="ambassdor-ani">
                         <div class="video-container">
-                            <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
+                            <!-- <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
                                 <source src="./pc/video/main_visual.mp4" type="video/mp4">
                             </video>
                             <video id="main-video-mo" poster="./mo/images/poster.jpg" autoplay loop muted playsinline preload="auto">
                                 <source src="./pc/video/main_visual_m.mp4?2025082603" type="video/mp4">
-                            </video>
+                            </video> -->
                         </div>
                     </div>
                     <!-- 영상  : end -->
@@ -1797,7 +1778,7 @@
                 content: {
                     title: 'LG전자 앰버서더 3기 모집',
                     description: '일상을 특별하게, 나답게! LG전자와 함께할 앰버서더 3기를 모집합니다.',
-                    imageUrl: 'https://jammy.lge.co.kr/assets/common/img/common/ogimage-800.jpg',
+                    imageUrl: './pc/images/ogimage-800.jpg',
                     link: {
                         mobileWebUrl: url,
                         webUrl: url
@@ -1818,4 +1799,4 @@
 
 </body>
 </html>
-<!--    2025082804  -->
+<!--    2025082809  -->
