--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                     <!-- 영상  -->
                     <div id="ambassdor-ani" class="ambassdor-ani">
                         <div class="video-container">
-                            <!-- <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
+                            <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
                                 <source src="./pc/video/main_visual.mp4" type="video/mp4">
                             </video>
                             <video id="main-video-mo" poster="./mo/images/poster.jpg" autoplay loop muted playsinline preload="auto">
                                 <source src="./pc/video/main_visual_m.mp4?2025082603" type="video/mp4">
-                            </video> -->
+                            </video>
                         </div>
                     </div>
                     <!-- 영상  : end -->
@@ -1778,7 +1778,7 @@
                 content: {
                     title: 'LG전자 앰버서더 3기 모집',
                     description: '일상을 특별하게, 나답게! LG전자와 함께할 앰버서더 3기를 모집합니다.',
-                    imageUrl: './pc/images/ogimage-800.jpg',
+                    imageUrl: 'https://kjbok1225.github.io/jammy.lge202509/pc/images/ogimage-800.png',
                     link: {
                         mobileWebUrl: url,
                         webUrl: url
@@ -1799,4 +1799,4 @@
 
 </body>
 </html>
-<!--    2025082809  -->
+<!--    2025082810  -->
