--- a/index5.html
+++ b/index5.html
@@ -29,7 +29,7 @@
             }
         })();
     </script>
-    <link rel="stylesheet" type="text/css" href="pc/css/common.css?2025032602">
+    <link rel="stylesheet" type="text/css" href="./pc/css/common.css?2025032602">
 
 	<div class="wrap _pc">
 		<div class="view_wrap">
