--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="세상의 모든 제품 경험, Jammy에서 나눠볼까요? 그램, 스탠바이미, 스타일러">
     <meta name="keywords" content="그램후기, 그램프로후기, 스탠바이미후기,스탠마이미고후기, 스타일러후기, 울트라게이밍모니터후기, 시네빔큐브후기">
 
-    <script src="./js/jquery.min.js"></script>
+    <script src="./pc/js/jquery.min.js"></script>
     <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
 
 </head>
@@ -1799,4 +1799,4 @@
 
 </body>
 </html>
-<!--    2025082811  -->
+<!--    2025082812  -->
