--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <meta name="description" content="세상의 모든 제품 경험, Jammy에서 나눠볼까요? 그램, 스탠바이미, 스타일러">
     <meta name="keywords" content="그램후기, 그램프로후기, 스탠바이미후기,스탠마이미고후기, 스타일러후기, 울트라게이밍모니터후기, 시네빔큐브후기">
 
+    <!-- <script src="https://jammy.lge.co.kr/assets/common/script/jquery.min.js"></script> -->
+    <!--    속도 이슈로 로컬에서 실행   -->
     <script src="./pc/js/jquery.min.js"></script>
     <script src="//developers.kakao.com/sdk/js/kakao.js"></script>
-
 </head>
 
 <body>
