--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <div id="ambassdor-ani" class="ambassdor-ani">
                         <div class="video-container">
                             <video id="main-video-pc" autoplay loop muted playsinline preload="auto">
-                                <source src="./pc/video/main_visual.mp4" type="video/mp4">
+                                <source src="./pc/video/main_visual.mp4?2025082813" type="video/mp4">
                             </video>
                             <video id="main-video-mo" poster="./mo/images/poster.jpg" autoplay loop muted playsinline preload="auto">
-                                <source src="./pc/video/main_visual_m.mp4?2025082603" type="video/mp4">
+                                <source src="./pc/video/main_visual_m.mp4?2025082813" type="video/mp4">
                             </video>
                         </div>
                     </div>
